--- a/github_scraping.ipynb
+++ b/github_scraping.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "### We are gonna scrape https://github.com/topics\n",
     "\n",
-    "- We will scrape the popular topics available on github\n",
-    "- We will also list top repositeries in the the popular github topics"
+    "- I will scrape the popular topics available on github\n"
    ]
   },
   {
